<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sualreminder.events.ViewEventActivity" >
    
    <item android:id="@+id/action_reminder"
            android:title="Add Reminder"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/> 
    <item android:id="@+id/action_today"
        android:title="@string/action_today"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
    <group android:checkableBehavior="single">
        <item android:id="@+id/action_day_view"
            android:title="@string/action_day_view"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/action_three_day_view"
            android:title="@string/action_three_day_view"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"
            android:checked="true"/>
        <item android:id="@+id/action_week_view"
            android:title="@string/action_week_view"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/>
          
    </group>
     <item android:id="@+id/action_add_note"
            android:title="@string/action_notes"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/> 
            
     <item android:id="@+id/action_lectures"
            android:title="Lectures"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/> 
            
     <item android:id="@+id/action_todo"
            android:title="Todo"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/> 
</menu>
